tests/algorithms/transpiler/Swift/maths/gamma.error
signal: illegal instruction
Swift/IntegerTypes.swift:6879: Fatal error: Double value cannot be converted to Int64 because the result would be less than Int64.min

*** Signal 4: Backtracing from 0x7f1e0c6378f5... done ***

*** Program crashed: Illegal instruction at 0x00007f1e0c6378f5 ***

Thread 0 "main" crashed:

0      0x00007f1e0c6378f5 closure #1 in closure #1 in closure #1 in _assertionFailure(_:_:file:line:flags:) + 309 in libswiftCore.so
1 [ra] 0x00007f1e0c6376e5 closure #1 in closure #1 in _assertionFailure(_:_:file:line:flags:) + 324 in libswiftCore.so
2 [ra] 0x00007f1e0c63755c closure #1 in _assertionFailure(_:_:file:line:flags:) + 379 in libswiftCore.so
3 [ra] 0x00007f1e0c7ad505 _assertionFailure(_:_:file:line:flags:) + 276 in libswiftCore.so
4 [ra] 0x000055921600e22e _p(_:) + 1085 in main
5 [ra] 0x000055921600dae0 main #1 () in  + 127 in main
6 [ra] 0x000055921600eba1 main + 160 in main
7 [ra] 0x00007f1e0afc21ca <unknown> in libc.so.6
8 [ra] 0x00007f1e0afc228b <unknown> in libc.so.6


Registers:

rax 0x0000000000000005  5
rdx 0x0000000000000001  1
rcx 0x0000000000000007  7
rbx 0x000055976179457b  94108663760251
rsi 0x0000000000000006  6
rdi 0x00005592385ab8e0  00 00 00 00 00 00 00 e8 71 00 00 00 00 00 00 00  ·······èq·······
rbp 0x00007fff7e78d790  d0 d7 78 7e ff 7f 00 00 e5 76 63 0c 1e 7f 00 00  Ð×x~ÿ···åvc·····
rsp 0x00007fff7e78d780  59 00 00 00 00 00 00 00 df 1a 00 00 00 00 00 00  Y·······ß·······
 r8 0x0000559238574010  07 00 07 00 04 00 06 00 07 00 07 00 02 00 01 00  ················
 r9 0x0000000000000007  7
r10 0x00005592385ab8f0  7b 45 79 61 97 55 00 00 e7 fd 32 8f df d4 a0 6c  {Eya·U··çý2·ßÔ l
r11 0x6ca0d4df8f32fde7  7827490209015201255
r12 0x0000000000000001  1
r13 0x00007f1e0c095068  00 00 00 00 00 00 00 00 50 e8 09 0c 1e 7f 00 00  ········Pè······
r14 0x0000000000000001  1
r15 0x000000000000000b  11
rip 0x00007f1e0c6378f5  0f 0b 48 83 ec 08 48 8d 05 be f8 45 00 48 8d 3d  ··H·ì·H··¾øE·H·=

rflags 0x0000000000010202  

cs 0x0033  fs 0x0000  gs 0x0000


Images (48 omitted):

0x000055921600a000–0x0000559216010820 e202d9580f9923a0dcd43a523f3cc34ad7e2826e main            /tmp/TestSwiftTranspiler_Algorithms_Golden572_maths_gamma3903061348/001/main
0x00007f1e0af98000–0x00007f1e0b147cb9 282c2c16e7b6600b0b22ea0c99010d2795752b5f libc.so.6       /usr/lib/x86_64-linux-gnu/libc.so.6
0x00007f1e0c4d1000–0x00007f1e0ca602d8 7bd479aa5e6f57e6772da70789dcdfa25d5e29b0 libswiftCore.so /root/.local/share/mise/installs/swift/6.1/usr/lib/swift/linux/libswiftCore.so

Backtrace took 0.11s

